--- a/prototypes/app/source/css/components/MessageTile.styl
+++ b/prototypes/app/source/css/components/MessageTile.styl
@@ -6,12 +6,11 @@
     padding: 16px 0;
     border-bottom: 1px solid $gray-lighter;
     
-    // Content can be wrapped in a link
-    > a {
-        color: $body-copy-color;
-        display: block;
-        text-decoration: none !important;
-    }
+    // The tile can be a link, so ensure
+    // some details
+    color: $body-copy-color;
+    display: block;
+    text-decoration: none !important;
     
     .MessageTile-contact {
         font-size: 1.1em;
